# RDMA_middleware

./: .gitignore  CMakeLists.txt  README.md  config.xml  core_dump_path.txt  git_add.sh  rebuild.sh  send_code.sh  test_git.txt
include/: database_api.h  dhmp.h  dhmp_client.h  dhmp_config.h  dhmp_context.h  dhmp_hash.h  dhmp_init.h  dhmp_log.h  dhmp_server.h  dhmp_task.h  dhmp_transport.h  dhmp_work.h  log_copy.h  logname.h  mid_api.h  mid_hashmap.h  mid_main_node.h  mid_rdma_utils.h  rdma_client.h  unlock_queue.h
src/: CMakeLists.txt  dhmp_client.c  dhmp_config.c  dhmp_context.c  dhmp_dev.c  dhmp_log.c  dhmp_mid.c  dhmp_poll.c  dhmp_server.c  dhmp_transport.c  dhmp_watcher.c  dhmp_work.c  log_buffer.c  mid_client_work.c  mid_epoll_context.c  mid_hashmap.c  mid_rdma_connection.c  mid_rdma_cq_handler.c  mid_rdma_init.c  mid_rdma_recv_handler.c  mid_rdma_recv_resp_handler.c  mid_rdma_task.c  mid_rdma_top_api.c  mid_rdma_transport.c  mid_rdma_utils.c  unlock_queue.c
src/log_copy/: CMakeLists.txt  database_api.c
test/: CMakeLists.txt  CMakeLists.txt.back.12.18  CMakeLists.txt.gengartest  Makefile  client.c  client_avg.c  client_mixed_avg.c  client_mixed_zipf.c  client_zipf.c  client_zipf.c.back  midd_test.c  pagerank.cpp  server.c  test.c
